--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,13 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "test/**/*.ts",
+    "test/**/*.tsx",
+    "./*.config.ts",
+    "./*.config.js"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
