--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --quiet",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"testing with vitest\" && vitest --run --coverage"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitest/coverage-v8": "^0.33.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -39,6 +40,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^0.33.0"
   }
 }
